# shogun

src/interfaces/coreml/: CMakeLists.txt  CoreMLConverter.cc  CoreMLConverter.h  CoreMLModel.cc  CoreMLModel.h  KernelConverter.cc  KernelConverter.h  KernelConverter_test.cc  SVMConverter.cc  SVMConverter.h  SVMConverter_test.cc  unittest_main.cc
src/shogun/: CMakeLists.txt
src/shogun/base/: SGObject.cpp  SGObject.h  variant.h
src/shogun/kernel/: GaussianKernel.cpp  GaussianKernel.h  Kernel.cpp  Kernel.h
